Tue Oct  9 19:51:48 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libxslt/extra.[ch]: removed older SAXON extensions
	  implementations from Darren Graves.
	* libexslt/date.c: applied patch from Charlie Bozeman to fix
	  a bug with time zone offset on Linux.

Tue Oct  9 13:02:46 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/documents.c libxslt/extra.c libxslt/transform.[ch]:
	  strip-space should also be applied to document imported
	  at run-time.

Tue Oct  9 12:36:53 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/imports.[ch] libxslt/transform.c libxslt/xslt.c:
	  rewrote the way strip-space gets applied. Closes bugs #61962
	* tests/docs/Makefile.am tests/docs/bug-66.xml
	  tests/general/Makefile.am tests/general/bug-66.*: added a 
	  specific example in the regression tests

Mon Oct  8 11:27:52 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: Fixing bug #61913
	* libxslt/transform.c: removing a small memleak when running with
	  the profiler.

Sun Oct  7 18:53:34 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/saxon.c libexslt/Makefile.am libexslt/exslt.[ch]:
	  added implementation of SAXON expression(), eval() and
	  evaluate() functions.
	  See http://saxon.sourceforge.net/saxon6.4.4/extensions.html
	* tests/extension/evaluate.xsl tests/extension/list.{xsl,out}:
	  modified to use SAXON namespace (functions are not registered
	  in the LibXSLT namespace)
	* tests/exslt/common/object-type.1.out: modified to take account
	  of the new saxon:expression function

Sun Oct  7 13:15:33 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c: fixed bug #61070, number ANY formatting 
	  should be faster too.
	* tests/docbook/result/xtchunk/html/* tests/xmlspec/REC-xml-20001006*.html:
	  updated the result of the tests. A subtle bug unnnoticed yet
	  in the XML Rec formatting got fixed.

Sat Oct  6 19:45:07 CEST 2001 Daniel Veillard <daniel@veillard.com>
